# QT-Apps

Telemetry1/: CMakeLists.txt  Main.qml  Resources.qrc  main.cpp
Telemetry1/Libraries/: serialhandler.cpp  serialhandler.h
Telemetry1/QmlFiles/: BasicPlot.qml
Telemetry2/: CMakeLists.txt  MiddleLayout.qml  Resources.qrc  SideMenu.qml  TopPanel.qml  main.cpp  main.qml
